src/objects/UniqueEntry__systemSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>UniqueEntry__Account_Cursor_Jump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Cursor Jump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Cache_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Cache ultimate entry configuration whenever a user access one of the ultimate entry pages. Specify cache time in minutes! Set to 0 to disable caching</inlineHelpText>
        <label>Cache Time</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Cursor_Jump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Cursor Jump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTRActivation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>First Time RIght Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_EasyDQ_Alt_Endpoint__c</fullName>
        <description>FTR EasyDQ Alternate Endpoint</description>
        <inlineHelpText>FTR EasyDQ Alternate Endpoint</inlineHelpText>
        <label>FTR EasyDQ Alt. Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_EasyDQ_Endpoint__c</fullName>
        <description>Primary EasyDQ Endpoint</description>
        <inlineHelpText>Primary EasyDQ Endpoint</inlineHelpText>
        <label>FTR EasyDQ Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__FTR_Key_Prefix__c</fullName>
        <label>FTR Key Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__GoogleAPI__c</fullName>
        <label>GoogleAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Cursor_Jump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Cursor Jump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__License_Status_1__c</fullName>
        <label>License Status 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__License_Status__c</fullName>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Mode__c</fullName>
        <label>Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__SalesforceServer__c</fullName>
        <description>This is the server on which your org resides, captured and stored in case Unique Entry must function in a Salesforce Community context.  This should not be manually edited unless advised by RingLead support.</description>
        <inlineHelpText>This is the server on which your org resides, captured and stored in case Unique Entry must function in a Salesforce Community context.  This should not be manually edited unless advised by RingLead support.</inlineHelpText>
        <label>Salesforce Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Save_Permission__c</fullName>
        <defaultValue>&apos;AllowSaveOnDup&apos;</defaultValue>
        <label>Save_Permission</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Threshold__c</fullName>
        <inlineHelpText>Confidence threshold for account, only accounts that have higher confidence score than this value will be marked as potential duplicate records.</inlineHelpText>
        <label>Threshold a</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Threshold_c__c</fullName>
        <inlineHelpText>Confidence threshold for contact, only contacts that have higher confidence score than this value will be marked as potential duplicate records.</inlineHelpText>
        <label>Threshold c</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Threshold_l__c</fullName>
        <inlineHelpText>Confidence threshold for lead, only leads that have higher confidence score than this value will be marked as potential duplicate records.</inlineHelpText>
        <label>Threshold l</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Threshold_p__c</fullName>
        <inlineHelpText>Confidence threshold for person account, only person accounts that have higher confidence score than this value will be marked as potential duplicate records.</inlineHelpText>
        <label>Threshold p</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__UEActivation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Unique Entry Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__UEHI_Registration_Endpoint__c</fullName>
        <label>UEHI Registration Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Word_Query_Size__c</fullName>
        <label>Word Query Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__hide_logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Toggles to show or hide the &quot;powered by&quot; logo at the top right corner on dupes pages</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <label>Unique Entry System Settings</label>
</CustomObject>